--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
   </ItemGroup>
 
 </Project>
